--- a/public/projects.json
+++ b/public/projects.json
@@ -29,7 +29,7 @@
     "description": "This is independent service provider website. Any independent service provider can use this. It helps him to service people in online.",
     "img": "https://i.ibb.co/nRwM9TC/ezgif-3-7c90c84d77.gif",
     "client": "https://github.com/MShafiMS/independent-service-probider",
-    "live": "https://independent-service-prov-403df.web.app"
+    "live": "https://calm-melba-4a9979.netlify.app/"
   },
   {
     "id": "5",
